--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
