--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "expo": "~37.0.3",
     "expo-linear-gradient": "~8.1.0",
     "immer": "^6.0.9",
