--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^2.0.2",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
     "typescript": "~3.8.3"
   },
   "private": true
